k8s/non-prod/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: case-study-ui-service-DEPLOY_ENV
  name: case-study-ui-service-DEPLOY_ENV
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
     app: case-study-ui-deployment-DEPLOY_ENV
